# docai

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  projects.code-workspace
notebooks/: convert_media_to_b64string.ipynb  create_batch_extraction.ipynb  create_schema.ipynb  test_b64string_extraction.ipynb  test_b64string_mls.ipynb  test_bytes_to_b64.ipynb  test_function_call.ipynb  test_function_call_new.ipynb  test_openai.ipynb  test_pymupdf_image.ipynb  test_schema_table.ipynb
openapi-spec/: create-schema.yaml  extract-data-batch.yaml  extract-data.yaml  get-results.yaml  get-schema.yaml  list-schema.yaml  spec.yaml
postman/: docai.postman_collection.json  docai.postman_environment.json
resources/: Makefile  app.py  cdk.json
resources/resources/: constants.py  stack.py  utils.py
resources/resources/stacks/: buckets.py  events.py  queues.py  secrets.py  stack.py  tables.py  utils.py
resources/resources/stacks/services/: base.py  common.py  extract.py  schema.py
resources/resources/utils/: role.py  table.py
resources/tests/unit/: test_resources_stack.py
samples/b64string/: invoice.pdf.txt  sample.jpg.txt  sample.pdf.txt  sample.png.txt
samples/media/: loe.txt
src/agents/: agents.js  index.js  package-lock.json  package.json  test.js  thread.js
src/agents/prompts/: schema-builder.md
src/assistants/: agents.js  index.js  package-lock.json  package.json  test.js  thread.js  utils.js
src/assistants/assistants/: index.js
src/assistants/assistants/schema-builder/: index.js  prompt.md
src/assistants/tmp/: schema-1.json  schema-1f4b0949-07a2-4031-8ea7-a69709248ce9.json  schema-4bc3aa13-e9e9-4d45-ae23-65bc68926059.json  schema-f0803218-1099-4b2e-8536-c3dba27cac43.json  thread-1.json  thread-328064fb-8e38-4988-a95d-6e1f73058605.json  thread-a3d6139a-cca5-4a6a-8560-ff662a000ffe.json  thread-c1f5da88-ce0d-41a7-85e2-9b1622f46428.json
src/backend/schema/: pyproject.toml  template.yaml
src/backend/shared/libs/: Makefile
src/backend/shared/libs/src/process_schema/: models.py
src/frontend/: package-lock.json  package.json
src/frontend/src/: app.html
src/frontend/src/routes/: +layout.svelte  +page.svelte
src/frontend/src/routes/assistants/: +layout.svelte
src/frontend/src/routes/assistants/schema-builder/: +page.svelte
src/frontend/src/routes/demos/: +layout.svelte
src/frontend/src/routes/demos/bank-statement/: +page.svelte
src/frontend/src/routes/demos/call-transcript/: +page.svelte
src/frontend/src/routes/demos/credit-report/: +page.svelte
src/frontend/src/routes/demos/employment-letter/: +page.svelte
src/frontend/src/routes/demos/invoice/: +page.svelte
src/frontend/src/routes/demos/mortgage-contract/: +page.svelte
src/frontend/src/routes/demos/pay-slip/: +page.svelte
src/frontend/src/routes/demos/receipt/: +page.svelte
src/frontend/src/routes/demos/salesforce-notes/: +page.svelte
src/frontend/src/routes/demos/tax-return/: +page.svelte
src/frontend/src/routes/documents/: +page.server.js  +page.svelte
src/frontend/src/routes/schemas/: +page.server.js  +page.svelte
src/frontend/src/routes/settings/: +layout.js  +layout.svelte  +page.svelte
src/frontend/src/routes/settings/profile/: +page.svelte
src/frontend/static/: sample_call_transcript.txt  sample_salesforce_notes.txt
src/functions/: Makefile  local-env-vars.json
src/functions/create_schema/: app.py
src/functions/delete_schema/: app.py
src/functions/extract_data/: app.py
src/functions/extract_data_batch/: app.py
src/functions/extract_data_batch_run/: app.py
src/functions/get_result/: app.py
src/functions/get_schema/: app.py
src/functions/list_schema/: app.py  event.json
src/functions/schema/create-schema/: app.py
src/functions/schema/update-schema/: event.json
src/layers/docai/: projects.code-workspace  pyproject.toml  requirements.txt
src/layers/docai/docai/: constants.py  error.py  exceptions.py  llm.py  middleware.py  models.py  stream.py  utils.py
src/layers/docai_extract/: pyproject.toml
src/layers/docai_schema/: pyproject.toml
src/layers/docai_schema/docai_schema/: exceptions.py  middleware.py  models.py  typing.py  utils.py
