[tool.poetry]
name = "docai"
version = "0.1.0"
description = ""
authors = ["Kwesi P Apponsah <kwesiparry@gmail.com>"]
readme = "README.md"
packages = [{include = "docai"}]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.11"
aws-lambda-powertools = {extras = ["parser", "tracer"], version = "^2.30.2"}
tiktoken = "^0.5.2"
jsonschema = "^4.20.0"
requests = "^2.31.0"
openai = "^1.6.1"
pymupdf = "^1.23.8"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
