[tool.poetry]
name = "docai-schema"
version = "0.1.0"
description = ""
authors = ["Kwesi P Apponsah <kwesiparry@gmail.com>"]
readme = "README.md"
packages = [{include = "docai_schema"}]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.11"
aws-lambda-powertools = {extras = ["parser", "tracer"], version = "^2.30.2"}
tiktoken = "^0.5.2"
jsonschema = "^4.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
